[package]
name = "llm-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.ggml-sys]
opt-level = 3

[dependencies]
anyhow = "1.0.72"
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
thiserror = "1.0.44"
tokio = { version = "1.31.0", features = ["rt", "rt-multi-thread", "sync"] }
